--- a/Snapcraft_Examples/utilities/snapcraft.yaml
+++ b/Snapcraft_Examples/utilities/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: test-lsusb # the name of the snap
+name: lsusb # the name of the snap
 version: 0.0.1 # the version of the snap
 # The vendor for the snap (replace 'Vendor <email@example.com>')
 vendor: Chad Young <chadbyoung@gmail.com>
@@ -7,13 +7,17 @@ description: test # A longer description for the snap
 icon: icon.png # A path to an icon for the package
 
 parts:
-    utilities:
+    lsusb:
         plugin: nil
         stage-packages:
             - usbutils
-            - pciutils
-            - vim
+#        snap:
+#            - lib/x86_64-linux-gnu/libusb*
+#            - usr/bin/lsusb*
+#            - usr/bin/usb*
 
 build-packages: [usbutils]
-build-packages: [pciutils]
-build-packages: [vim]
+
+apps:
+    lsusb:
+        command: /usr/bin/lsusb
