--- a/Snapcraft_2.x/Shell/SystemInfo/snapcraft.yaml
+++ b/Snapcraft_2.x/Shell/SystemInfo/snapcraft.yaml
@@ -15,22 +15,18 @@ grade: devel # must be 'stable' to release into candidate/stable channels
 confinement: devmode # use 'strict' once you have the right plugs and slots
 
 apps:
-  # This is the command to show the system info 
+  
+ # This command runs the shell script to show system information
   show:
     command: systeminfo
-  # This is a command to move the readme from the snap the user's home dir
+
+  # This command runs the shell script to move the README to the user's home dir
   mvfile:
-    command: ./copyreadme
+    command: copyreadme
     daemon: simple
 
 parts:
-
   show:
     plugin: dump
     source: .
 
-  mvfile:
-    plugin: dump
-    source: .
-    organize:
-        copyreadme: $SNAP_DATA
