--- a/Snapcraft_2.x/Python/hello_py/snapcraft.yaml
+++ b/Snapcraft_2.x/Python/hello_py/snapcraft.yaml
@@ -5,18 +5,32 @@ description: simple HW program in python
 grade: devel # must be 'stable' to release into candidate/stable channels
 confinement: devmode # use 'strict' once you have the right plugs and slots
 
-
-
 apps:
+
+# This command runs the python exe and the hello python script
   hello:
     command: "python hello.py"
+
+# This command runs just the python exe and you can add any 
+# python script to it - "hello-world-py.python <file>.py"
   python:
     command: python
 
+# This command runs the shell script to move the README to the user's home dir
+  mvfile:
+    command: copyreadme
+    daemon: simple
 
 
 parts:
-  sample:
+
+  # This part is what installs python2 into the snap
+  pyinstall:
     plugin: python
     python-version: python2
+    source: .
+
+  # This part is what dumps the files (copyreadme, etc.) into the snap directory
+  mvfiles:
+    plugin: dump
     source: .
