change name of weather snap

--- a/Snapcraft_2.x/Shell/Weather/snapcraft.yaml
+++ b/Snapcraft_2.x/Shell/Weather/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: weather # 
+name: pf-weather # 
 version: '0.1' # 
 summary: This snap will display temperature in Pflugerville TX # 
 description: This snap will display temperature in Pflugerville TX 
