--- a/Snapcraft_2.x/Misc/Mosquitto/snapcraft.yaml
+++ b/Snapcraft_2.x/Misc/Mosquitto/snapcraft.yaml
@@ -11,6 +11,8 @@ description: This is a message broker that supports version 3.1 and 3.1.1 of the
 
 #
 # This successfully compiled using snapcraft 2.29
+# The original source located here:
+# https://github.com/eclipse/mosquitto/tree/master/snap
 #
 
 confinement: strict
