--- a/Snapcraft_2.x/Misc/Mosquitto/snapcraft.yaml
+++ b/Snapcraft_2.x/Misc/Mosquitto/snapcraft.yaml
@@ -15,6 +15,7 @@ description: This is a message broker that supports version 3.1 and 3.1.1 of the
 # https://github.com/eclipse/mosquitto/tree/master/snap
 #
 
+grade: stable
 confinement: strict
 
 apps:  
