--- a/Snapcraft_2.x/Python/EGW3K_Temp/snap/snapcraft.yaml
+++ b/Snapcraft_2.x/Python/EGW3K_Temp/snap/snapcraft.yaml
@@ -3,30 +3,15 @@ version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
 summary: Simple snap to read and display the temperature # 79 char long summary
 description: |
   #This snap will read the ST HTS221 sensor on the EGW3K 3002 and then display the
-  #temperature. The path to the files is:
-  #    >$ /sys/bus/iio/devices/iio\:device0/
-  #
-  #The files  that are read are the following:
-  #    in_temp_raw
-  #    in_temp_offset
-  #    in_temp_scale
-  #
-  #The formula is:
-  #    T = ((in_temp_raw + in_temp_offset) * in_temp_scale))
-  #
+  #temperature. 
 
 grade: devel # must be 'stable' to release into candidate/stable channels
 confinement: devmode # use 'strict' once you have the right plugs and slots
 
 
-#TODO:
-#  Copy the directory structure into the snap (dump i think) both "snap" and "src"
-
 apps:
   temperature:
     command: "python $SNAP/src/main.py"
-  test:
-    command: "python"
 
 parts:
   pyinstall:
@@ -40,5 +25,3 @@ parts:
     organize:
       ../src/main.py : src/main.py
       
-      #    stage:
-      #      - main.py
