--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: nodered
-version: 0.13
+version: 0.01
 summary: A visual tool for wiring the Internet of Things
 description: Node-RED is a tool for wiring together hardware devices, APIs and online services in new and interesting ways.
 confinement: strict
@@ -18,6 +18,7 @@ parts:
     plugin: nodejs
     node-packages:
       - node-red
+      - node-red-contrib-modbustcp
   settings:
     plugin: dump
     source: settings
@@ -26,7 +27,7 @@ parts:
         - .
     organize:
       start.sh : bin/launch
-    snap: 
+    prime: 
       - .
     filesets:
       all: [ . ]
